# ai-footprint

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KICKOFF.md  README.md  install.sh  mkdocs.yml  pyproject.toml  uninstall.sh
.codex/: hooks.json
.github/workflows/: build-docs.yml  bump-homebrew.yml  check-tool-updates.yml  ci.yml  publish-pypi.yml  release.yml
.superpowers/plans/: 2026-06-27-agent-carbon-mvp.md  2026-06-29-agent-carbon-resolve.md  2026-06-29-self-hosted-models.md  2026-06-30-support-crush-opencode.md  2026-07-02-qualite-lecture-resolution.md  2026-07-12-landing-page.md  2026-07-13-qualite-codebase-review.md  2026-07-18-codex-questions.md
.superpowers/specs/: 2026-06-27-agent-carbon-mvp-design.md  2026-06-29-self-hosted-models-design.md  2026-06-30-support-crush-opencode.md  2026-07-02-qualite-lecture-resolution-design.md  2026-07-09-renommage-ai-footprint.md  2026-07-10-footprint-card.md  2026-07-12-landing-page-design.md  (+3 more)
agent_carbon/: __init__.py  __main__.py  config.py  models.py  release.py
agent_carbon/store/: db.py
ai_footprint/: __init__.py  __main__.py  cache.py  config.py  config_detect.py  dates.py  models.py  nudge.py  release.py  tool_updates.py
docs/: ARCHITECTURE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  GUIDE-AVANCE.en.md  GUIDE-AVANCE.md  GUIDE.en.md  GUIDE.md  METHODOLOGY.en.md  METHODOLOGY.md  SPEC-qualite-lecture-resolution.md  TODO-self-hosted-models.md  checklist-nouvel-outil.en.md  checklist-nouvel-outil.md  comparaison-donnees-outils.en.md  comparaison-donnees-outils.md  index.en.md  index.html  index.md  publication-pypi.en.md  publication-pypi.md
scripts/: build_docs.py  statusline.sh
tests/: test_cache.py  test_card.py  test_claude_code_collector.py  test_cli_end_to_end.py  test_cli_models.py  test_cli_nudge.py  test_codex_collector.py  test_config_detect.py  test_config_persist.py  test_crush_collector.py  test_dates.py  test_docs_site.py  test_ecologits_offline.py  test_engine.py  test_engine_selfhosted.py  test_ingest_and_save.py  test_ingest_ux.py  test_landing_page.py  test_models_config.py  test_nudge.py  test_params_error_logging.py  test_params_huggingface.py  test_params_resolver.py  test_pending_models.py  test_pi_collector.py  test_release.py  test_rename.py  test_report.py  test_resolve.py  test_resolve_cli.py  test_resolver.py  test_statusline.py  test_store.py  test_tool_updates.py
(+75 files in other folders)
