[project]
name = "ai-footprint"
version = "1.0.0"
description = "Compteur d'impact environnemental multi-critères pour outils d'IA agentique (vendor-neutral, via EcoLogits)"
requires-python = ">=3.10,<4"
dependencies = [
  "ecologits==0.11.0",
  "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ai-footprint = "ai_footprint.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_footprint*"]
