[project]
name = "ai-footprint"
version = "1.2.1"
description = "Compteur d'impact environnemental multi-critères pour outils d'IA agentique (vendor-neutral, via EcoLogits)"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4"
dependencies = [
  "ecologits==0.11.1",
  "huggingface_hub>=1.23.0",
]

[project.urls]
Homepage = "https://github.com/hrenaud/ai-footprint"
Repository = "https://github.com/hrenaud/ai-footprint"
Changelog = "https://github.com/hrenaud/ai-footprint/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ai-footprint = "ai_footprint.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_footprint*"]
